# Fractals-with-celular-automatas-Haskell

./: .gitignore  Automatas.cabal  CHANGELOG.md  README.md
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: Automatas-0.1.0.0-inplace.conf  Automatas-0.4.0.0-inplace.conf  Automatas-0.5.2.0-inplace.conf  Automatas-0.5.3.0-inplace.conf  Automatas-0.5.4.0-inplace.conf  Automatas-0.5.5.0-inplace.conf  Automatas-0.5.6.0-inplace.conf  Automatas-1.0.0.0-inplace.conf  package.cache
dist-newstyle/packagedb/ghc-9.2.5/: Automatas-0.4.0.0-inplace.conf  Automatas-0.5.0.0-inplace.conf  Automatas-0.5.3.0-inplace.conf  Automatas-0.5.4.0-inplace.conf  Automatas-1.0.1.0-inplace.conf  package.cache
src/: Animacion.hs  Automata.hs  Interaccion.hs  Interaction.hs  Opciones.hs  Propiedades.hs  Tipos.hs  Utiles.hs  UtilesGraficos.hs
src/Nucleo/: Animacion.hs  Automata.hs  Menu.hs  Opciones.hs  Propiedades.hs
src/Tests/: DatosElementosPreconstruidos.hs  PruebasDibujos.hs  PruebasEntrada.hs
src/Tipos/: TipoAlmacenElementos.hs  TipoAutomata.hs  TipoBarraNavegacion.hs  TipoBase.hs  TipoElemento.hs  TipoEntrada.hs  TipoEtiqueta.hs  TipoForma.hs  TipoLista.hs  TipoMundo.hs  TipoParrafo.hs  TipoPosicion.hs  TipoSaltoDeLinea.hs  TipoTitulo.hs
src/Utilidades/: BBDD.hs  Colores.hs  Constantes.hs  Entradas.hs  Error.hs  Ficheros.hs  Utiles.hs  UtilesGraficos.hs
