cabal-version:      3.0
name:               Automatas
version:            0.5.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:           https://github.com/Jastxz/Fractals-with-celular-automatas

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Jastxz
maintainer:         javicraft14@gmail.com

-- A copyright notice.
-- copyright:
category:           Graphics
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Interaction

    -- Modules included in this library but not exported.
    other-modules: Tipos, Utiles, UtilesGraficos,
        Opciones, Propiedades, Animacion, Automata

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base ^>= 4.14.3.0, matrix ^>= 0.3.6.1, 
        time ^>= 1.9.3, gloss ^>= 1.13.2.2
    hs-source-dirs:   src
    default-language: Haskell2010

executable Automatas
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        Automatas

    hs-source-dirs:   app
    default-language: Haskell2010
