cabal-version:      3.0
name:               Automatas
version:            2.0.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:           https://github.com/Jastxz/Fractals-with-celular-automatas

-- A URL where users can report bugs.
-- bug-reports:
license:
author:             Jastxz, rcp-code
maintainer:         javicraft14@gmail.com, rcrespocode@gmail.com

-- A copyright notice.
-- copyright:
category:           Graphics
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:  Interaccion

  -- Modules included in this library but not exported.
  other-modules:
    Nucleo.Animacion
    Nucleo.Automata
    Nucleo.Menu
    Nucleo.Opciones
    Nucleo.Propiedades
    Tests.DatosElementosPreconstruidos
    Tests.PruebasDibujos
    Tests.PruebasEntrada
    Tipos.TipoAlmacenElementos
    Tipos.TipoAutomata
    Tipos.TipoBarraNavegacion
    Tipos.TipoBase
    Tipos.TipoElemento
    Tipos.TipoEntrada
    Tipos.TipoEtiqueta
    Tipos.TipoForma
    Tipos.TipoLista
    Tipos.TipoMundo
    Tipos.TipoParrafo
    Tipos.TipoPosicion
    Tipos.TipoSaltoDeLinea
    Tipos.TipoTitulo
    Utilidades.BBDD
    Utilidades.Colores
    Utilidades.Constantes
    Utilidades.Entradas
    Utilidades.Error
    Utilidades.Ficheros
    Utilidades.Utiles
    Utilidades.UtilesGraficos

  --Tipos.TipoAlmacenElementos
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , aeson           ^>=2.2.0.0
    , base            ^>=4.19.1.0
    , bson            ^>=0.4.0.1
    , bytestring      ^>=0.12.1.0
    , containers      ^>=0.6.5.1
    , deepseq         ^>=1.5.0.0
    , directory       ^>=1.3.7.1
    , filepath        ^>=1.4.2.2
    , gloss           ^>=1.13.2.2
    , matrix          ^>=0.3.6.1
    , mongoDB         ^>=2.7.1.2
    , random          ^>=1.2.1.1
    , storablevector  ^>=0.2.13.1
    , text            ^>=2.1.1
    , time            ^>=1.9.3

  hs-source-dirs:   src
  default-language: Haskell2010

executable Automatas
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , Automatas
    , base       ^>=4.19.1.0

  hs-source-dirs:   app
  default-language: Haskell2010
